Fixed logo image

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <!-- Start Footer -->
     <footer>
       <div class="container">
-        <img src="/images/logo.png" alt="Logo" />
+        <img src="images/logo.png" alt="Logo" />
         <p>We are social</p>
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-google-plus-g"></i>
